Switched API to return JSON responses for everything. This will make interaction easier
